--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,11 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 html {
-    --line-color: #e5e7eb
+    --line-color: #e5e7eb;
+
+    &.dark {
+        --line-color: rgba(255, 255, 255, 0.2);
+    }
 }
 
 .borderBlack {
